Bug 161443 - Table text is cut off from DOCX (border / margin problem)
Summary: Table text is cut off from DOCX (border / margin problem)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:24.8.0 target:24.2.5
Keywords:
Depends on:
Blocks:
 
Reported: 2024-06-06 15:02 UTC by Miklos Vajna
Modified: 2024-06-20 14:05 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Minimal reproducer (10.00 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-06-06 15:02 UTC, Miklos Vajna
Details
Related bugdoc (12.19 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-06-10 13:48 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2024-06-06 15:02:13 UTC
Created attachment 194568 [details]
Minimal reproducer

Steps to reproduce the problem:

1) Open the attached document.

2) Look at the A1 cell.

Expected result: "A1 is the first cell in the table" is rendered.

Actual result: "1 is the first cell in the table" (first character is missing).
Comment 1 Commit Notification 2024-06-07 08:20:19 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/39c54c0ef837e0e23a676a4d1fa5da667e18939c

tdf#161443 DOCX import, table style: fix para border leaking into cell border

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Miklos Vajna 2024-06-10 13:48:45 UTC
Created attachment 194629 [details]
Related bugdoc

Related problem: now the paragraph border no longer has an unwanted influence on cell borders, but in case the table style does include a paragraph border, that's ignored. The attached doc is a demo of that: we need to import the border / spacing / color in a way that keeps the cell border unchanged but the in-table paragraphs have to get it still.
Comment 3 Commit Notification 2024-06-11 09:20:31 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/c15531dd24101c78ec41345685cbda7c2a8eaef4

tdf#161443 DOCX import, table style: fix para border leaking into cell border

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-06-11 10:10:44 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/013300c751d7a9ede12c1bf1c784254d1c6c5433

tdf#161443 DOCX import, table style: handle para border in table cell paras

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-06-13 08:57:31 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/86a5e47b07d5b8140434d24f74230eacaac16bd4

tdf#161443 DOCX import, table style: handle para border in table cell paras

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.